@@ -148,11 +148,11 @@
       <ul class="notices">
        <li id="replyallnotice" style="display:none">
         <gettext>You are</gettext> <span class="replyAllNoticeUnderline"><gettext>replying to ALL</gettext></span> (<span class="replyAllNoticeCount"></span>).
-        <input id="replyall_revert" type="submit" class="button" value="<gettext>Reply To Sender instead</gettext>" />
+        <input id="replyall_revert" class="button" value="<gettext>Reply To Sender instead</gettext>" />
        </li>
        <li id="replylistnotice" style="display:none">
         <gettext>You are replying to a mailing list</gettext><span class="replyListNoticeId"></span>.
-        <input id="replylist_revert" type="submit" class="button" value="<gettext>Reply To Sender instead</gettext>" />
+        <input id="replylist_revert" class="button" value="<gettext>Reply To Sender instead</gettext>" />
        </li>
        <li id="fwdattachnotice" style="display:none">
         <gettext>Click this box to add the original message text to the body.</gettext>
