@@ -2,6 +2,8 @@
 v5.0.21-git
 -----------
 
+[mms] Fix handling of RETURN keypress in the Subject input on the dynamic
+      compose page.
 [jan] Fix regression in sending PGP encrypted messages (Bug #11150).
 [jan] Update Slovak translation (Marika Schvarczova
       <schvarczova.marika@domeny.sk>).
